# whaleos-vpd

./: BUILD.gn  Makefile  OWNERS  PRESUBMIT.cfg  README.md  vpd.c  vpd.cc
include/lib/: checksum.h  flashrom.h  lib_vpd.h  vpd.h  vpd_decode.h  vpd_tables.h
init/: vpd-icc.conf  vpd-log.service
lib/: checksum.c  flashrom.c  lib_smbios.c  lib_vpd.c  lib_vpd_test.c  vpd_container.c  vpd_decode.c  vpd_encode.c
tests/: Makefile  functions.sh  gVpdInfo.tbz  run_tests  test_basic.sh  test_equal.sh  test_export.sh  test_multi_add_del.sh  test_overflow.sh  test_seg_fault.sh  vpd_0x600.tbz
util/: check_rw_vpd  dump_vpd_log  update_rw_vpd  vpd_get_value  vpd_icc
